[package]
name = "servus"
version = "0.1.0"
edition = "2021"
description = "Common Rust library for developing backend services at Foundation"
readme = "README.md"
authors = [
    "Foundation Devices <hello@foundationdevices.com>",
]

[[example]]
name = "demo"

[dependencies]
axum = { version = "0.6.0-rc.1", features = ["json"] }
clap = { version = "3", features = ["derive", "env"] }
once_cell = "1.13"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "json", "env-filter"] }

[dev-dependencies]
anyhow = "1"
