# SPDX-FileCopyrightText: 2022 Foundation Devices Inc. <hello@foundationdevices.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "servus"
version = "0.1.0"
edition = "2021"
description = "Common Rust library for developing backend services at Foundation"
readme = "README.md"
authors = [
    "Foundation Devices <hello@foundationdevices.com>",
]
license = "AGPL-3.0"

[[example]]
name = "demo"

[[example]]
name = "echo"

[dependencies]
axum = { version = "0.6.20", features = ["json", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
once_cell = "1.18"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "map-request-body", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "json", "env-filter"] }

[dev-dependencies]
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "time"] }
